roles/deploy-applications/files/version1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: version1
  name: version1
  namespace: trivago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: version1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: version1
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
      - image: docker.io/nginx:1.24.0
        name: nginx-v1
        volumeMounts:
          - name: shared-data
            mountPath: /usr/share/nginx/html/
        ports:
        - containerPort: 80
        resources: {}
status: {}
