roles/deploy-applications/files/version1/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: version1
  name: version1
  namespace: trivago
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: version1
