roles/deploy-applications/files/version1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 2
  name: version1
  namespace: trivago
spec:
  ingressClassName: traefik
  rules:
  - host: version1.trivago.apps.com
    http:
      paths:
      - backend:
          service:
            name: version1
            port:
              number: 80
        path: /
        pathType: Prefix
